Fix triangle gone problem in Firefox.

--- a/Markdown collapse example.ipynb
+++ b/Markdown collapse example.ipynb
@@ -1,13 +1,44 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "summary{\n",
+       "    display:list-item;\n",
+       "}\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<style>\n",
+    "summary{\n",
+    "    display:list-item;\n",
+    "}\n",
+    "</style>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "In the following graph you can select the *date range* and *granularity* (yearly, montly) \n",
     "of the timeline (X-axis), and plot any of the follow counts in the black, red, blue and green lines. \n",
     "\n",
-    "<details>    \n",
+    "<details>\n",
     "    <summary style=\"cursor: pointer;font-weight:bold\">Click here to read explainations for options!</summary>\n",
     "    \n",
     "- **adds**: number of first-time insertions\n",
