Fix one bug in NB6.

--- a/6. General metadata of the editor.ipynb
+++ b/6. General metadata of the editor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "hide_input": true,
     "init_cell": true,
@@ -182,7 +182,7 @@
     {
      "data": {
       "text/markdown": [
-       "***Page: The Camp of the Saints***"
+       "***Page: Das Heerlager der Heiligen***"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -250,7 +250,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a2c0b8fd4b04ff6a9878612a06999dc",
+       "model_id": "4e6630c72c684cd2b20506934c8aa2db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -264,7 +264,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d78094a9eb54323a5353058a5007b3d",
+       "model_id": "ddd480ad2333462e8b21c92ea92e7aa6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -397,7 +397,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1bca8c9fe694d4b9edd78b80b777e0c",
+       "model_id": "aff52978761c42288c21aa38c4c43353",
        "version_major": 2,
        "version_minor": 0
       },
@@ -413,7 +413,7 @@
      "output_type": "stream",
      "text": [
       "Editor's metadata can be found in:\n",
-      "https://en.wikipedia.org/w/api.php?action=query&list=users&ususerids=85879&usprop=blockinfo|editcount|registration|gender&format=json\n"
+      "https://de.wikipedia.org/w/api.php?action=query&list=users&ususerids=453288&usprop=blockinfo|editcount|registration|gender&format=json\n"
      ]
     },
     {
@@ -455,23 +455,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>userid</th>\n",
-       "      <td>85879</td>\n",
+       "      <td>453288</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>name</th>\n",
-       "      <td>User2004</td>\n",
+       "      <td>Laibwächter</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>editcount</th>\n",
-       "      <td>23415</td>\n",
+       "      <td>34402</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>registration</th>\n",
-       "      <td>2004-07-13T08:00:40Z</td>\n",
+       "      <td>2007-09-19T12:56:09Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>gender</th>\n",
-       "      <td>unknown</td>\n",
+       "      <td>male</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -479,11 +479,11 @@
       ],
       "text/plain": [
        "                            values\n",
-       "userid                       85879\n",
-       "name                      User2004\n",
-       "editcount                    23415\n",
-       "registration  2004-07-13T08:00:40Z\n",
-       "gender                     unknown"
+       "userid                      453288\n",
+       "name                   Laibwächter\n",
+       "editcount                    34402\n",
+       "registration  2007-09-19T12:56:09Z\n",
+       "gender                        male"
       ]
      },
      "metadata": {},
@@ -492,7 +492,7 @@
     {
      "data": {
       "text/markdown": [
-       "#### Evolution of the Conflict Score of *User2004*"
+       "#### Evolution of the Conflict Score of *Laibwächter*"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -506,7 +506,7 @@
      "output_type": "stream",
      "text": [
       "Time range from 2002-03-01 to 2019-12-16\n",
-      "Total Page conflict score: 0.8693190644663654\n"
+      "Total Page conflict score: 0.8339562040887236\n"
      ]
     },
     {
@@ -549,12 +549,10 @@
          "name": "Conflict Score",
          "type": "bar",
          "x": [
-          "2005-09-17T00:00:00+00:00",
-          "2005-11-23T00:00:00+00:00"
+          "2010-08-06T00:00:00+00:00"
          ],
          "y": [
-          1.025054148439709,
-          0.916979036494804
+          0.5324047182658342
          ]
         }
        ],
@@ -1390,20 +1388,20 @@
        "<div>\n",
        "        \n",
        "        \n",
-       "            <div id=\"e5459196-7197-44c1-ba77-61a7ded21488\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+       "            <div id=\"7cf23f8c-d072-461d-9729-eb045d11a91a\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
        "            <script type=\"text/javascript\">\n",
        "                require([\"plotly\"], function(Plotly) {\n",
        "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
        "                    \n",
-       "                if (document.getElementById(\"e5459196-7197-44c1-ba77-61a7ded21488\")) {\n",
+       "                if (document.getElementById(\"7cf23f8c-d072-461d-9729-eb045d11a91a\")) {\n",
        "                    Plotly.newPlot(\n",
-       "                        'e5459196-7197-44c1-ba77-61a7ded21488',\n",
-       "                        [{\"marker\": {\"color\": \"rgba(0, 0, 0, 1)\"}, \"name\": \"Conflict Score\", \"type\": \"bar\", \"x\": [\"2005-09-17T00:00:00+00:00\", \"2005-11-23T00:00:00+00:00\"], \"y\": [1.025054148439709, 0.916979036494804]}],\n",
+       "                        '7cf23f8c-d072-461d-9729-eb045d11a91a',\n",
+       "                        [{\"marker\": {\"color\": \"rgba(0, 0, 0, 1)\"}, \"name\": \"Conflict Score\", \"type\": \"bar\", \"x\": [\"2010-08-06T00:00:00+00:00\"], \"y\": [0.5324047182658342]}],\n",
        "                        {\"bargap\": 0.9, \"barmode\": \"group\", \"hovermode\": \"closest\", \"legend\": {\"x\": 0.5, \"y\": 1.2}, \"showlegend\": true, \"template\": {\"data\": {\"bar\": [{\"error_x\": {\"color\": \"#2a3f5f\"}, \"error_y\": {\"color\": \"#2a3f5f\"}, \"marker\": {\"line\": {\"color\": \"#E5ECF6\", \"width\": 0.5}}, \"type\": \"bar\"}], \"barpolar\": [{\"marker\": {\"line\": {\"color\": \"#E5ECF6\", \"width\": 0.5}}, \"type\": \"barpolar\"}], \"carpet\": [{\"aaxis\": {\"endlinecolor\": \"#2a3f5f\", \"gridcolor\": \"white\", \"linecolor\": \"white\", \"minorgridcolor\": \"white\", \"startlinecolor\": \"#2a3f5f\"}, \"baxis\": {\"endlinecolor\": \"#2a3f5f\", \"gridcolor\": \"white\", \"linecolor\": \"white\", \"minorgridcolor\": \"white\", \"startlinecolor\": \"#2a3f5f\"}, \"type\": \"carpet\"}], \"choropleth\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"choropleth\"}], \"contour\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"contour\"}], \"contourcarpet\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"contourcarpet\"}], \"heatmap\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"heatmap\"}], \"heatmapgl\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"heatmapgl\"}], \"histogram\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"histogram\"}], \"histogram2d\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"histogram2d\"}], \"histogram2dcontour\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"histogram2dcontour\"}], \"mesh3d\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"mesh3d\"}], \"parcoords\": [{\"line\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"parcoords\"}], \"pie\": [{\"automargin\": true, \"type\": \"pie\"}], \"scatter\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatter\"}], \"scatter3d\": [{\"line\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatter3d\"}], \"scattercarpet\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattercarpet\"}], \"scattergeo\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattergeo\"}], \"scattergl\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattergl\"}], \"scattermapbox\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattermapbox\"}], \"scatterpolar\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterpolar\"}], \"scatterpolargl\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterpolargl\"}], \"scatterternary\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterternary\"}], \"surface\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"surface\"}], \"table\": [{\"cells\": {\"fill\": {\"color\": \"#EBF0F8\"}, \"line\": {\"color\": \"white\"}}, \"header\": {\"fill\": {\"color\": \"#C8D4E3\"}, \"line\": {\"color\": \"white\"}}, \"type\": \"table\"}]}, \"layout\": {\"annotationdefaults\": {\"arrowcolor\": \"#2a3f5f\", \"arrowhead\": 0, \"arrowwidth\": 1}, \"coloraxis\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"colorscale\": {\"diverging\": [[0, \"#8e0152\"], [0.1, \"#c51b7d\"], [0.2, \"#de77ae\"], [0.3, \"#f1b6da\"], [0.4, \"#fde0ef\"], [0.5, \"#f7f7f7\"], [0.6, \"#e6f5d0\"], [0.7, \"#b8e186\"], [0.8, \"#7fbc41\"], [0.9, \"#4d9221\"], [1, \"#276419\"]], \"sequential\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"sequentialminus\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]]}, \"colorway\": [\"#636efa\", \"#EF553B\", \"#00cc96\", \"#ab63fa\", \"#FFA15A\", \"#19d3f3\", \"#FF6692\", \"#B6E880\", \"#FF97FF\", \"#FECB52\"], \"font\": {\"color\": \"#2a3f5f\"}, \"geo\": {\"bgcolor\": \"white\", \"lakecolor\": \"white\", \"landcolor\": \"#E5ECF6\", \"showlakes\": true, \"showland\": true, \"subunitcolor\": \"white\"}, \"hoverlabel\": {\"align\": \"left\"}, \"hovermode\": \"closest\", \"mapbox\": {\"style\": \"light\"}, \"paper_bgcolor\": \"white\", \"plot_bgcolor\": \"#E5ECF6\", \"polar\": {\"angularaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"bgcolor\": \"#E5ECF6\", \"radialaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}}, \"scene\": {\"xaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}, \"yaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}, \"zaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}}, \"shapedefaults\": {\"line\": {\"color\": \"#2a3f5f\"}}, \"ternary\": {\"aaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"baxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"bgcolor\": \"#E5ECF6\", \"caxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}}, \"title\": {\"x\": 0.05}, \"xaxis\": {\"automargin\": true, \"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\", \"title\": {\"standoff\": 15}, \"zerolinecolor\": \"white\", \"zerolinewidth\": 2}, \"yaxis\": {\"automargin\": true, \"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\", \"title\": {\"standoff\": 15}, \"zerolinecolor\": \"white\", \"zerolinewidth\": 2}}}, \"xaxis\": {\"gridwidth\": 2, \"ticklen\": 5, \"title\": {\"text\": \"Daily\"}, \"zeroline\": true}, \"yaxis\": {\"gridwidth\": 2, \"ticklen\": 5}},\n",
        "                        {\"responsive\": true}\n",
        "                    ).then(function(){\n",
        "                            \n",
-       "var gd = document.getElementById('e5459196-7197-44c1-ba77-61a7ded21488');\n",
+       "var gd = document.getElementById('7cf23f8c-d072-461d-9729-eb045d11a91a');\n",
        "var x = new MutationObserver(function (mutations, observer) {{\n",
        "        var display = window.getComputedStyle(gd).display;\n",
        "        if (!display || display === 'none') {{\n",
@@ -1544,7 +1542,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6b0150cce0e4c7e8325811b575b362b",
+       "model_id": "2d44fb1ad2004b8a917ce5604357f3e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1558,7 +1556,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16c18c31a99344a783a105da6fa09694",
+       "model_id": "d0c878c1fed3494aaa13a9905cde7270",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1624,8 +1622,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected editor: User2004\n",
-      "https://xtools.wmflabs.org/api/user/pages_count/en.wikipedia.org/User2004\n"
+      "Selected editor: Laibwächter\n",
+      "https://xtools.wmflabs.org/api/user/pages_count/de.wikipedia.org/Laibw%C3%A4chter\n"
      ]
     },
     {
@@ -1655,11 +1653,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Created pages:</th>\n",
-       "      <td>67</td>\n",
+       "      <td>257</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Deleted pages</th>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1667,8 +1665,8 @@
       ],
       "text/plain": [
        "                value\n",
-       "Created pages:     67\n",
-       "Deleted pages       4"
+       "Created pages:    257\n",
+       "Deleted pages       3"
       ]
      },
      "metadata": {},
@@ -1760,7 +1758,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85b5e28b7f9441969da4471ab8f5dc0a",
+       "model_id": "01847e3c8dfe4aa1a29876b5316d5737",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1792,7 +1790,7 @@
     {
      "data": {
       "text/markdown": [
-       "***Editor: KleenupKrew***"
+       "***Editor: Laibwächter***"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1817,7 +1815,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://xtools.wmflabs.org/api/user/pages/en.wikipedia.org/KleenupKrew\n"
+      "https://xtools.wmflabs.org/api/user/pages/de.wikipedia.org/Laibw%C3%A4chter\n"
      ]
     },
     {
@@ -1835,7 +1833,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93bc4633c5984198b7f00b916fcad1c2",
+       "model_id": "eedd60c1ce4c4e889f41d2532e28bae6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1849,7 +1847,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f223e7f06b0b44529e56c955665ca591",
+       "model_id": "dd567bc12e0b4b6d8971678d12e56716",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1929,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "solution2": "hidden"
    },
@@ -1938,15 +1936,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected editor: User2004\n",
+      "Selected editor: Laibwächter\n",
       "The metadata of pages created can be found in:\n",
-      "https://xtools.wmflabs.org/api/user/pages/en.wikipedia.org/User2004\n"
+      "https://xtools.wmflabs.org/api/user/pages/de.wikipedia.org/Laibw%C3%A4chter\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc35ec4b832b49159ad3dda233840d07",
+       "model_id": "f7a9e69882514f7b8e20f5c6f3e87561",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1991,11 +1989,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>page_id</th>\n",
-       "      <td>3405046</td>\n",
+       "      <td>7434464</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>title</th>\n",
-       "      <td>Michael Jenkins</td>\n",
+       "      <td>Literaturjahr 1707</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ns</th>\n",
@@ -2006,10 +2004,10 @@
        "</div>"
       ],
       "text/plain": [
-       "                  values\n",
-       "page_id          3405046\n",
-       "title    Michael Jenkins\n",
-       "ns                     0"
+       "                     values\n",
+       "page_id             7434464\n",
+       "title    Literaturjahr 1707\n",
+       "ns                        0"
       ]
      },
      "metadata": {},
@@ -2066,7 +2064,7 @@
     "## https://github.com/gesiscss/wikiwho_demo/blob/master/external/api.py                                    ##\n",
     "\n",
     "# Select one page by inputting its title, e.g. \"Michael Jenkins\":\n",
-    "selected_page_title = \"Michael Jenkins\"\n",
+    "selected_page_title = pages_created['page_title'].iloc[0]\n",
     "\n",
     "# Create a WikipwdiaAPI(DV) instance.\n",
     "wikipediadv = WikipediaDV(WikipediaAPI(lng=lng_selected))\n",
@@ -2089,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "hide_input": true
    },
